maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:9: error: value unary_! is not a member of Int
	if (!(aMurNord(x,y)) && !getIndication(x,y-1)<=marquage){
                                ^JediEscaper:12: error: value unary_! is not a member of Int
  if(!(aMurOuest(x,y)) && !getIndication(x-1,y)<=marquage){
                          ^